--- a/src/App.css
+++ b/src/App.css
@@ -40,14 +40,6 @@ h4 {
   margin-bottom: -8vh;
 }
 
-.boxHold {
-  position: absolute;
-  margin: auto;
-  width: 100vw;
-  margin-top: 5vh;
-
-}
-
 .rectHold {
   margin: auto;
   width: 80vh;;
@@ -105,3 +97,102 @@ h4 {
   width: 20vh;
   height: 20vh;
 }
+
+@media (min-width:0px) and (max-width:600px) {
+
+  h1 {
+    font-size: 3.2vh;
+    margin: auto;
+    font-family: 'Nimbus';
+    text-align: center;
+    margin-bottom: -8vh;
+  }
+
+  h3 {
+    font-size: 3vh;
+    margin-top: 105vh;
+    margin-bottom: -10vh;
+    font-family: 'Nimbus';
+    text-align: center;
+    margin-bottom: -8vh;
+  }
+
+  h4 {
+    font-size: 3vh;
+    margin-top: 14vh;
+    margin-bottom: -10vh;
+    font-family: 'Nimbus';
+    text-align: center;
+    margin-bottom: -8vh;
+  }
+
+  .App {
+    height: 146vh;
+    width: auto;
+  }
+
+  .rectHold {
+    margin: auto;
+    width: 20vh;
+    margin-top: 0vh;
+  }
+
+  .rectangle1 {
+    position: absolute;
+    margin-top: 50vh;
+    margin-left: 0vh;
+    width: 20vh;
+    height: 20vh;
+  }
+
+  .rectangle2 {
+    position: absolute;
+    margin-top: 20vh;
+    margin-left: 0vh;
+    width: 20vh;
+    height: 20vh;
+  }
+  
+  .rectangle3 {
+    position: absolute;
+    margin-top: 80vh;
+    margin-left: 0vh;
+    width: 20vh;
+    height: 20vh;
+  }
+
+  .boxHold {
+    position: absolute;
+    margin: auto;
+    width: 100vw;
+    margin-top: 5vh;
+  }
+
+  .hexInfo1 {
+      font-size: 5vh;
+      position: absolute;
+      margin-top: 43.5vh;
+      margin-left: 0vh;
+      width: 20vh;
+      height: 20vh;
+    }
+    
+    .hexInfo2 {
+      font-size: 5vh;
+      position: absolute;
+      margin-top: 13vh;
+      margin-left: 0vh;
+      width: 20vh;
+      height: 20vh;
+    }
+    
+    .hexInfo3 {
+      font-size: 5vh;
+      position: absolute;
+      margin-top: 73vh;
+      margin-left: 0vh;
+      width: 20vh;
+      height: 20vh;
+    }
+  
+  }
